Signed-off-by: p7878389 <370057689@qq.com>

--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>sshManage</groupId>
+    <groupId>sshManager</groupId>
     <artifactId>com.manage</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
@@ -15,13 +15,9 @@
         <!-- shiro jar版本 -->
         <shiro.version>1.2.4</shiro.version>
 
-        <!-- mybaits 相关jar斑斑  -->
+        <!-- mybaits 相关jar版本  -->
         <!--<mybatis.version>3.2.8</mybatis.version>
         <mybatis-spring.version>1.2.2</mybatis-spring.version>-->
-
-        <!-- 连接池 -->
-        <druid.version>1.0.9</druid.version>
-        <!-- <junit.version>3.8.1</junit.version> -->
 
         <!-- mysql jar 版本 -->
         <mysql.version>5.1.26</mysql.version>
@@ -52,6 +48,7 @@
         <shiro-redis.version>2.4.2.1-RELEASE</shiro-redis.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdk.version>1.7</jdk.version>
+        
     </properties>
     <dependencies>
         <dependency>
