Signed-off-by: pxh <pxh@timevale.com>

--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -10,6 +10,9 @@ redis.testOnBorrow=true
 redis.testOnReturn=true
 
 redis.timeout=1800
-#是否启用redis
 
-redis.cacheEnabled=false
+#是否启用redis
+redis.cacheEnabled=true
+
+#是否使用redis管理shiro缓存
+redis.shiroCache=true
