--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -48,6 +48,19 @@
         <url-pattern>/*</url-pattern>
     </servlet-mapping>
 
+    <!--<filter>-->
+        <!--<filter-name>openSession</filter-name>-->
+        <!--<filter-class>org.springframework.orm.hibernate4.support.OpenSessionInViewFilter</filter-class>-->
+        <!--<init-param>-->
+            <!--<param-name>singleSession</param-name>-->
+            <!--<param-value>false</param-value>-->
+        <!--</init-param>-->
+    <!--</filter>-->
+    <!--<filter-mapping>-->
+        <!--<filter-name>openSession</filter-name>-->
+        <!--<url-pattern>/*</url-pattern>-->
+    <!--</filter-mapping>-->
+
     <!-- shiro 安全过滤器 -->
     <filter>
         <filter-name>shiroFilter</filter-name>
@@ -77,16 +90,13 @@
     </listener>
 
 
-    <!-- hibernate懒加载异常问题 -->
-    <filter>
-        <filter-name>hibernateFilter</filter-name>
-        <filter-class>
-            org.springframework.orm.hibernate4.support.OpenSessionInViewFilter
-        </filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>hibernateFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error/404.html</location>
+    </error-page>
 
+    <error-page>
+        <error-code>500</error-code>
+        <location>/error/500.html</location>
+    </error-page>
 </web-app>
