Signed-off-by: pxh <pxh@timevale.com> 1、修改拦截器 session判断 2、修改redis序列化方式  改用json 3、修改缓存注解 默认缓存时间 4、新增分页代码  用户分页以实现 5、使用bootstrap treeviwe插件实现树形菜单

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- springmvc test -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
 
         <!-- Spring -->
         <dependency>
