--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -12,7 +12,7 @@ redis.testOnReturn=true
 redis.timeout=1800
 
 #是否启用redis
-redis.cacheEnabled=true
+redis.cacheEnabled=false
 
 #是否使用redis管理shiro缓存
-redis.shiroCache=true
+redis.shiroCache=false
