1、全局异常捕获修改

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 log4j.rootLogger = ERROR,manage
 log4j.appender.manage = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.manage.file = ${catalina.home}/logs/manage.log
+log4j.appender.manage.file = ${catalina.home}/logs/sshManagemanage.log
 log4j.appender.manage.datePattern = yyyy-MM-dd
 log4j.appender.manage.append =true
 log4j.appender.manage.layout = org.apache.log4j.PatternLayout
@@ -18,7 +18,7 @@ log4j.logger.org.hibernate=debug
 log4j.logger.org.hibernate.SQL=debug
 
 ### log JDBC bind parameters ###
-log4j.logger.org.hibernate.type=debug
+#log4j.logger.org.hibernate.type=debug
 
 ### log schema export/update ###
 #log4j.logger.org.hibernate.tool.hbm2ddl=debug
