--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,6 @@
         <!-- shiro jar版本 -->
         <shiro.version>1.2.4</shiro.version>
 
-        <!-- mybaits 相关jar版本  -->
-        <!--<mybatis.version>3.2.8</mybatis.version>
-        <mybatis-spring.version>1.2.2</mybatis-spring.version>-->
-
         <!-- mysql jar 版本 -->
         <mysql.version>5.1.26</mysql.version>
 
@@ -29,10 +25,8 @@
         <log4j.version>1.2.17</log4j.version>
         <slf4j.version>1.7.5</slf4j.version>
 
-
         <!-- redis -->
         <data-redis.version>1.3.4.RELEASE</data-redis.version>
-
         <jedis-version>2.5.2</jedis-version>
 
         <!-- hibernate -->
@@ -111,12 +105,6 @@
             <artifactId>spring-context-support</artifactId>
             <version>${spring.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-
         <!-- redis -->
         <dependency>
             <groupId>org.springframework.data</groupId>
@@ -136,18 +124,6 @@
             <artifactId>hibernate-core</artifactId>
             <version>${hibernate.version}</version>
         </dependency>
-
-        <!-- mybatis -->
-        <!--<dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis</artifactId>
-            <version>${mybatis.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis-spring</artifactId>
-            <version>${mybatis-spring.version}</version>
-        </dependency>-->
 
         <!-- c3p0 -->
         <dependency>
@@ -270,13 +246,6 @@
         </dependency>
         <!-- ############################################## -->
 
-        <!--json-lib -->
-        <dependency>
-            <groupId>net.sf.json-lib</groupId>
-            <artifactId>json-lib</artifactId>
-            <version>2.4</version>
-            <classifier>jdk15</classifier>
-        </dependency>
         <dependency>
             <groupId>org.fusesource</groupId>
             <artifactId>sigar</artifactId>
@@ -290,9 +259,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.2.2</version>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.1</version>
         </dependency>
 
     </dependencies>
